@@ -17,8 +17,8 @@
         <type>int</type>
         <default>1</default>
         <locale name="C">
-          <short>Capture pointer by clicking mouse button</short>
-          <long>Mouse button to click in order to capture the pointer. Use "1" for left -, "2" for middle -, "3" for right button. Select "0" to capture without a click.</long>
+          <short>Mouse button used to capture the pointer</short>
+          <long>This mouse button must be pressed while the pointer is over the capture area in order to capture the pointer. Valid values are "0" if no button is needed, "1" for left button, "2" for middle button, and "3" for right button.</long>
         </locale>
       </schema>
       <schema>
@@ -27,8 +27,8 @@
         <type>int</type>
         <default>1</default>
         <locale name="C">
-          <short>Release pointer by clicking mouse button</short>
-          <long>Mouse button to click in order to release the pointer. Use "1" for left -, "2" for middle -, "3" for right mouse button.</long>
+          <short>Mouse button used to release the pointer</short>
+          <long>This mouse button must be pressed to release the pointer from the capture area. Valid values are "1" for left button, "2" for middle button, and "3" for right button.</long>
         </locale>
       </schema>
       <schema>
@@ -37,8 +37,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Capture pointer if Shift is pressed</short>
-          <long>Capture the pointer when it is over the capture area and the Shift key is pressed.</long>
+          <short>Capture pointer only if Shift is pressed</short>
+          <long>Whether if Shift must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Shift key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -47,8 +47,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Capture pointer if Alt is pressed</short>
-          <long>Capture the pointer when it is over the capture area and the Alt key is pressed.</long>
+          <short>Capture pointer only if Alt is pressed</short>
+          <long>Whether if Alt must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Alt key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -57,8 +57,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Capture pointer if Ctrl is pressed</short>
-          <long>Capture the pointer when it is over the capture area and the Ctrl key is pressed.</long>
+          <short>Capture pointer only if Ctrl is pressed</short>
+          <long>Whether if Ctrl must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Ctrl key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -67,8 +67,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Pointer release requires Shift to be pressed</short>
-          <long>Release the pointer by clicking while the Shift key is pressed.</long>
+          <short>Release pointer only if Shift is pressed</short>
+          <long>Whether if the Shift key must be pressed with the mouse button set in "release-button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
       <schema>
@@ -77,8 +77,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Pointer release requires Alt to be pressed</short>
-          <long>Release the pointer by clicking while the Alt key is pressed.</long>
+          <short>Release pointer only if Alt is pressed</short>
+          <long>Whether if the Alt key must be pressed with the mouse button set in "release-button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
       <schema>
@@ -87,8 +87,8 @@
         <type>bool</type>
         <default>false</default>
         <locale name="C">
-          <short>Pointer release requires Ctrl to be pressed</short>
-          <long>Release the pointer by clicking while the Ctrl key is pressed.</long>
+          <short>Release pointer only if Ctrl is pressed</short>
+          <long>Whether if the Ctrl key must be pressed with the mouse button set in "release-button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
     </schemalist>
