@@ -1,3 +1,10 @@
+2009-01-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>
+
+	reviewed by: Gerd Kohlberger
+
+	* data/pointer-capture-applet.schemas.in: More improvements to gconf
+	key descriptions. Closes bug #552222.
+
 2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>
 
 	* data/pointer-capture-applet.schemas.in: Improve key
